// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanExecutionPolicy component default policy renders the correct policy action message 1`] = `
<div
  data-testid="policy-summary"
>
  <div
    data-testid="policy-summary"
  >
    <h5
      class="gl-mt-6 gl-text-body"
      data-testid="label"
    >
      Summary
    </h5>
     
    <p
      class="gl-text-body"
      data-testid="content"
    >
      <!---->
       
      <div
        class="gl-mb-3"
      >
        Run 
        <strong>
          DAST
        </strong>
         
        <!---->
      </div>
       
      <div
        class="gl-mb-3"
      >
        And scans to be performed:
      </div>
       
      <ul>
        <li>
          
          on every pipeline on the main branch
        
        </li>
      </ul>
    </p>
  </div>
</div>
`;

exports[`ScanExecutionPolicy component multiple action policy renders the correct policy action message 1`] = `
<div
  data-testid="policy-summary"
>
  <div
    data-testid="policy-summary"
  >
    <h5
      class="gl-mt-6 gl-text-body"
      data-testid="label"
    >
      Summary
    </h5>
     
    <p
      class="gl-text-body"
      data-testid="content"
    >
      <!---->
       
      <div
        class="gl-mb-3"
      >
        Run 
        <strong>
          Container Scanning
        </strong>
         
        <!---->
      </div>
      <div
        class="gl-mb-3"
      >
        Run 
        <strong>
          Secret Detection
        </strong>
         
        <!---->
      </div>
      <div
        class="gl-mb-3"
      >
        Run 
        <strong>
          SAST
        </strong>
         
        <!---->
      </div>
       
      <div
        class="gl-mb-3"
      >
        And scans to be performed:
      </div>
       
      <ul>
        <li>
          
          on every pipeline on the main branch
        
        </li>
      </ul>
    </p>
  </div>
</div>
`;

exports[`ScanExecutionPolicy component no action policy renders the correct policy action message 1`] = `
<div
  data-testid="policy-summary"
>
  <div
    data-testid="policy-summary"
  >
    <h5
      class="gl-mt-6 gl-text-body"
      data-testid="label"
    >
      Summary
    </h5>
     
    <p
      class="gl-text-body"
      data-testid="content"
    >
      No actions defined - policy will not run.  
      <div
        class="gl-mb-3"
      >
        And scans to be performed:
      </div>
       
      <ul>
        <li>
          
          on every pipeline on the main branch
        
        </li>
      </ul>
    </p>
  </div>
</div>
`;

exports[`ScanExecutionPolicy component policy with unsupported attributes renders the correct policy action message 1`] = `
<div
  data-testid="policy-summary"
>
  <div
    data-testid="policy-summary"
  >
    <h5
      class="gl-mt-6 gl-text-body"
      data-testid="label"
    >
      Summary
    </h5>
     
    <p
      class="gl-text-body"
      data-testid="content"
    >
      <!---->
       
      <div
        class="gl-mb-3"
      >
        Run 
        <strong>
          SAST
        </strong>
         
        <!---->
      </div>
       
      <div
        class="gl-mb-3"
      >
        And scans to be performed:
      </div>
       
      <ul>
        <li>
          
          on every pipeline on the main branch
        
        </li>
      </ul>
    </p>
  </div>
</div>
`;
